samples/_failures_safe/1761508187_b8283a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3c7017b.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
